apps/steve-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steve-website
  namespace: steve-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: steve-website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: steve-website
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: steve-website
          image: ghcr.io/jvz-devx/steve-website:main@sha256:a71b2af6f8b25a64cece10c5169d849c65d557899fb9cc969c08aaf9be508b12 # {"$imagepolicy": "flux-system:steve-website"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
