apps/steve-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: steve-website
  namespace: steve-website
spec:
  selector:
    app.kubernetes.io/name: steve-website
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
