apps/steve-website/ingress.yaml
---
# Public via Cloudflare Tunnel.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steve-website
  namespace: steve-website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: f4f59044-cc55-41f0-a76a-96fdfeb42dc9.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
    - host: steve.jensvanzutphen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steve-website
                port:
                  number: 3000
  tls:
    - hosts:
        - steve.jensvanzutphen.com
      secretName: steve-website-tls
